<resources>
    <string name="app_name">Closet</string>

    <string-array name="sizes_array">
        <item>Sizes</item>
        <item>XS</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
    </string-array>

    <string name="menu">Menu</string>
    <string name="hanger_icon">Hanger Icon</string>
    <string name="search">Search</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="shirts">Shirts</string>
    <string name="pants">Pants</string>
    <string name="dresses">Dresses</string>
    <string name="shoes">Shoes</string>
    <string name="accessories">Accessories</string>
    <string name="top_picks">Top Picks</string>


    <!-- Navigation drawer strings -->
    <string name="nav_header_title">My Closet</string>
    <string name="nav_header_subtitle">Organize your wardrobe</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Navigation menu items -->
    <string name="nav_home">Home</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_outfits">My Outfits</string>
    <string name="nav_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="add_item">Add item</string>
    <string name="envision_avatar">Envision Avatar</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="back">Back</string>
    <string name="default_web_client_id">57185028705-2ofc4fptrq5upksrk7ig1sht10fpctfo.apps.googleusercontent.com</string>

</resources>